# Basic-Geant4-Application

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  fisica.cc  run.cc  run.hh
include/: ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  SensitiveDetector.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  SensitiveDetector.cc
